k8s/production/example-service-cpu/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service-cpu
  labels:
    deploy-service.io/stage: production
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service-cpu
  template:
    metadata:
      labels:
        app: example-service-cpu
        deploy-service.io/stage: production
    spec:
      containers:
        - name: example-service-cpu
          image: IMAGE_PLACEHOLDER
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 15
