k8s/production/example-service-cpu/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-service-cpu
spec:
  ingressClassName: nginx
  rules:
    - host: "prj-1774704001129980368.158.160.241.48.sslip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-service-cpu
                port:
                  number: 8080
